--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+cycler==0.10.0
+graphviz==0.5.2
+matplotlib==1.5.3
 numpy==1.11.3
+pydotplus==2.0.2
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
 scikit-learn==0.18.1
 scipy==0.18.1
+six==1.10.0
